# llama-cpp-py-sync

./: .gitignore  .llama_cpp_sync_state.json  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.txt  pyproject.toml  requirements.txt
.github/workflows/: build.yml  cleanup.yml  sync.yml  test.yml  validate-bindings.yml
examples/: backend_info.py  basic_generation.py  benchmark.py  embeddings_example.py  streaming_generation.py
mcp-github-actions/: README.md  server.py
scripts/: auto_version.py  build_llama_cpp.py  gen_bindings.py  run_local_ci.py  run_tests.py  setup_windows_toolchain.ps1  smoke_test_chat.py  sync_upstream.py  validate_cffi_surface.py  validate_high_level_api.py  validate_llama_exports.py
src/llama_cpp_py_sync/: THIRD_PARTY_NOTICES.txt  __init__.py  __main__.py  _cffi_bindings.py  _cli.py  _version.py  backends.py  embeddings.py  llama.py
tests/: __init__.py  test_import.py
