[build-system]
requires = ["setuptools>=61.0", "wheel", "cffi>=1.15.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-cpp-py-sync"
dynamic = ["version"]
description = "Auto-synchronized Python bindings for llama.cpp using CFFI ABI mode"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Faris Al-Zahrani"}
]
maintainers = [
    {name = "Faris Al-Zahrani"}
]
keywords = [
    "llama",
    "llama.cpp",
    "llm",
    "language-model",
    "ai",
    "machine-learning",
    "gguf",
    "inference",
    "cffi",
    "bindings"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "cffi>=1.15.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/FarisZahrani/llama-cpp-py-sync"
Repository = "https://github.com/FarisZahrani/llama-cpp-py-sync"
Documentation = "https://github.com/FarisZahrani/llama-cpp-py-sync#readme"
Issues = "https://github.com/FarisZahrani/llama-cpp-py-sync/issues"

[tool.setuptools]
packages = ["llama_cpp_py_sync"]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "llama_cpp_py_sync._version.__version__"}

[tool.setuptools.package-data]
llama_cpp_py_sync = [
    "*.so",
    "*.dylib",
    "*.dll",
    "*.pyd",
    "py.typed",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
